# advent-of-code

./: :w  Cargo.toml  README.md
2021/: pyproject.toml
2021/src/day01/part1/: day01_part1.py  main.py
2021/src/day01/part2/: __init__.py
2021/src/day02/part1/: day02_part1.py  expected_output.txt
2021/src/day02/part2/: day02_part2.py  expected_output.txt
2021/src/day03/part1/: day03_part1.py
2021/src/day03/part2/: day03_part2.py
2021/src/day04/part1/: day04_part1.py
2021/src/day04/part2/: day04_part2.py
2021/src/day05/part1/: day05_part1.py
2021/src/day05/part2/: day05_part2.py
2021/src/day06/part1/: day06_part1.py
2021/src/day06/part2/: day06_part2.py  expected_output.txt
2021/src/day07/part1/: day07_part1.py
2021/src/day07/part2/: day07_part2.py  expected_output.txt
2021/src/day08/part1/: day08_part1.py
2021/src/day08/part2/: day08_part2.py  expected_output.txt
2021/src/day09/part1/: day09_part1.py
2021/src/day09/part2/: day09_part2.py
2021/src/day10/part1/: day10_part1.py
2021/src/day10/part2/: day10_part2.py  expected_output.txt
2021/src/puzzle_utils/: __init__.py
2021/src/template/part1/: dayXX_part1.py
2022/day03/part1/src/: main.rs
2022/day03/part2/src/: main.rs
2022/day04/part1/src/: main.rs
2022/day04/part2/src/: main.rs
2022/day05/part1/: Cargo.toml
2022/day05/part1/src/: main.rs
2022/day05/part2/src/: main.rs
2022/day06/part1/src/: main.rs
2022/day06/part2/src/: main.rs
2022/day07/part1/src/: main.rs
2022/day07/part2/src/: main.rs
2022/day08/part1/src/: main.rs
2022/day08/part2/src/: main.rs
2023/: Cargo.toml
2023/day01/: Cargo.toml
2023/day01/part1/: Cargo.toml
2023/day01/part1/src/: main.rs
2023/day01/part2/: Cargo.toml
2023/day01/part2/src/: main.rs
2023/day01/src/: part01.rs  part02.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs  part01.rs  part02.rs
2023/day03/: Cargo.toml
2023/day03/src/: main.rs  part01.rs  part02.rs
2023/day04/: Cargo.toml
2023/day04/src/: part01.rs  part02.rs
2023/day05/: Cargo.toml
2023/day05/src/: part01.rs  part02.rs
2023/day06/: Cargo.toml
2023/day06/src/: part01.rs  part02.rs
2023/day07/: Cargo.toml
2023/day07/src/: part01.rs  part02.rs
2023/day08/: Cargo.toml
2023/day08/src/: part01.rs  part02.rs
2023/day09/: Cargo.toml
2023/day09/src/: main.rs  part01.rs  part02.rs
2023/day10/: Cargo.toml
2023/day10/src/: part01.rs  part02.rs
2023/day11/: Cargo.toml
2023/day11/src/: part01.rs  part02.rs
2023/day12/: Cargo.toml
2023/day12/src/: part01.rs  part02.rs
2023/day13/: Cargo.toml
2023/day13/src/: part01.rs  part02.rs
2023/day14/: Cargo.toml
2023/day14/src/: part01.rs  part02.rs
2023/day15/: Cargo.toml
2023/day15/src/: part01.rs  part02.rs
2023/day16/: Cargo.toml
2023/day16/src/: part01.rs  part02.rs
2023/day17/: Cargo.toml
2023/day17/src/: part01.rs  part02.rs
2023/day18/: Cargo.toml
2023/day18/src/: part01.rs  part02.rs
2023/day19/: Cargo.toml
2023/day19/src/: part01.rs  part02.rs
2023/template/: Cargo.toml
2023/template/src/: main.rs  part01.rs  part02.rs
2024/: pyproject.toml
2024/src/day01/part1/: day01_part1.py
2024/src/day01/part2/: day01_part2.py
2024/src/day02/part1/: day02_part1.py
2024/src/day02/part2/: day02_part2.py
2024/src/day03/part1/: day03_part1.py  expected_output.txt
2024/src/day03/part2/: day03_part2.py  expected_output.txt
2024/src/day04/part1/: day04_part1.py
2024/src/day04/part2/: day04_part2.py
2024/src/day05/part1/: day05_part1.py
2024/src/day06/part1/: day06_part1.py
2024/src/day06/part2/: day06_part2.buggy.py  day06_part2.py  day06_part2_buggy.py
2024/src/day06/part2/tests/: puzzle_input02.txt  puzzle_input03.txt  puzzle_input04.txt  puzzle_input05.txt  puzzle_input06.txt
2024/src/day08/part1/: day08_part1.py
2024/src/day08/part2/: day08_part2.py
2024/src/day09/part1/: day09_part1.py  expected_output.txt
2025/: pyproject.toml  readme.md
2025/src/: utils.py
2025/src/day01/part1/: day01_part1.py
2025/src/day01/part2/: day01_part2.py
2025/src/day02/part1/: day02_part1.py  expected_output.txt
2025/src/day02/part2/: day02_part2.py  expected_output.txt
2025/src/day03/part1/: day03_part1.py
2025/src/day03/part2/: day03_part2.py  expected_output.txt
2025/src/day04/part1/: day04_part1.py
2025/src/day04/part2/: day04_part2.py
2025/src/day05/part1/: day05_part1.py
2025/src/day05/part2/: day05_part2.py  expected_output.txt
2025/src/day06/part1/: day06_part1.py
2025/src/day06/part2/: day06_part2.py
2025/src/day07/part1/: day07_part1.py
2025/src/day07/part2/: day07_part2.py  expected_output.txt
2025/src/day08/part1/: day08_part1.py
2025/src/day08/part2/: day08_part2.py  expected_output.txt
2025/src/day09/part1/: day09_part1.py  expected_output.txt
2025/src/puzzle_utils/: __init__.py
src/: day03.rs  main.rs
(+4 files in other folders)
