[project]
name = "aoc2021"
version = "0.1.0"
authors = [
    { name = "Fritz Rehde", email = "fritzrehde.work@gmail.com" }
]
dependencies = []
requires-python = ">= 3.8"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = ["src/_2021"]

[tool.pytest.ini_options]
python_files = ["*.py"]
