[workspace]
resolver = "2"

members = ["day*", "template"]
default-members = ["day*", "template"]

[workspace.dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
derive-new = "0.6.0"
itertools = "0.12.0"
parse-display = "0.8.2"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
nom = "7.1.3"
rayon = "1.8.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
indoc = "2.0.4"
derivative = "2.2.0"
num-integer = "0.1.45"
streaming-iterator = "0.1.9"
vec1 = "1.10.1"
ndarray = "0.15.6"
grid = "0.12.0"
memoize = "0.4.1"
pathfinding = "4.6.0"
