[project]
name = "aoc2024"
version = "0.1.0"
authors = [
    { name = "Fritz Rehde", email = "fritzrehde.work@gmail.com" }
]
dependencies = [
    "more-itertools>=10.4.0",
]
requires-python = ">= 3.8"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = ["src/_2021"]

[tool.pytest.ini_options]
python_files = ["*.py"]
norecursedirs = ["puzzle_utils", "template"]
python_functions = "test_*"
addopts = "--verbose --benchmark-max-time=0.1 --benchmark-columns=mean,stddev --benchmark-sort=mean --benchmark-name=long"
