[package]
name = "day07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
parse-display = { workspace = true }
