[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive-new = "0.6.0"
derive_more = "0.99.17"
itertools = "0.12.0"
num-integer = "0.1.45"
parse-display = "0.8.2"
