[package]
name = "day18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
grid = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
parse-display = { workspace = true }
strum = { workspace = true }
vec1 = { workspace = true }
